name:                sockjs
version:             0.1.0.0
synopsis:            sockjs server side, using warp and websockets
homepage:            https://github.com/yihuang/wai-sockjs
license:             BSD3
license-file:        LICENSE
author:              yihuang
maintainer:          yi.codeplayer@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.8
library
  exposed-modules:   Sockjs, Types
  other-modules:     Apps
  ghc-options:       -Wall
  build-depends: base >= 4.0 && < 5.0
               , transformers
               , bytestring
               , text
               , blaze-builder
               , vector
               , containers
               , http-types
               , wai
               , warp
               , websockets
               , wai-websockets
               , wai-app-static
               , file-embed
               , enumerator
               , attoparsec
               , attoparsec-enumerator
               , aeson
               , stm

executable sockjs-example
  ghc-options: -Wall -O3 -threaded
  main-is: Main.hs
  build-depends: base >= 4.0 && < 5.0
               , transformers
               , bytestring
               , text
               , blaze-builder
               , vector
               , containers
               , http-types
               , wai
               , warp
               , websockets
               , wai-websockets
               , wai-app-static
               , file-embed
               , enumerator
               , attoparsec
               , attoparsec-enumerator
               , aeson
               , stm

