name:                sockjs
version:             0.1.0.0
synopsis:            sockjs server side, using warp and websockets
homepage:            https://github.com/yihuang/wai-sockjs
license:             BSD3
license-file:        LICENSE
author:              yihuang
maintainer:          yi.codeplayer@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.8
library
  exposed-modules:   Sockjs, Types
  other-modules:     Apps
  ghc-options:       -Wall
  build-depends: base >= 4.0 && < 5.0
               , transformers
               , bytestring
               , text
               , blaze-builder
               , vector
               , containers
               , http-types
               , wai
               , websockets >= 0.4 && < 0.5
               , wai-app-static
               , file-embed
               , enumerator
               , attoparsec
               , attoparsec-enumerator
               , aeson
               , stm
               , cookie

executable sockjs-example
  ghc-options: -Wall -O3 -threaded -static
  main-is: Main.hs
  build-depends: base >= 4.0 && < 5.0
               , transformers
               , bytestring
               , text
               , blaze-builder
               , vector
               , containers
               , http-types
               , wai
               , warp >= 0.4.6 && < 0.5
               , websockets >= 0.4 && < 0.5
               , wai-websockets >= 0.5 && < 0.6
               , wai-app-static
               , file-embed
               , enumerator
               , attoparsec
               , attoparsec-enumerator
               , aeson
               , stm
               , cookie

