name:                wai-sockjs
version:             0.1.0.0
synopsis:            sockjs server side, using warp and websockets
license:             BSD3
license-file:        LICENSE
author:              Petr Pilař, Huang Yi
maintainer:          maintainer+the.palmik@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.8

extra-source-files:
    LICENSE
  , README.md

library
  hs-source-dirs: src
  exposed-modules:
      Network.Sock
    , Network.Wai.Application.Sock

  build-depends:
      base >= 4.0 && < 5.0
    , transformers
    , bytestring
    , text
    , data-default           == 0.4.*
    , blaze-builder
    , vector
    , containers
    , http-types
    , wai
    , websockets             == 0.6.*
    , wai-app-static
    , file-embed
    , enumerator
    , attoparsec
    , attoparsec-enumerator
    , aeson
    , stm
    , cookie
    , pureMD5
    , binary
