name:                wai-sockjs
version:             0.1.0.0
synopsis:            sockjs server side, using warp and websockets
license:             BSD3
license-file:        LICENSE
author:              Petr Pilař
maintainer:          maintainer+the.palmik@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.8

extra-source-files:
    LICENSE
  , README.md

library
  hs-source-dirs: src
  exposed-modules:
      Network.Wai.Sock

  other-modules:
      Control.Concurrent.MVar.Extra
    , Network.Wai.Sock.Handler
    , Network.Wai.Sock.Message
    , Network.Wai.Sock.Frame
    , Network.Wai.Sock.Session
    , Network.Wai.Sock.Transport

  build-depends:
      attoparsec
    , attoparsec-enumerator
    , aeson
    , base                   == 4.*
    , binary
    , blaze-builder
    , bytestring
    , conduit                == 0.4.*
    , containers
    , cookie
    , data-default           == 0.4.*
    , enumerator
    , file-embed
    , http-types
    , lifted-base            == 0.1.*
    , monad-control          == 0.3.*
    , pureMD5
    , random                 == 1.*
    , stm
    , text
    , tagged                 == 0.4.*
    , transformers
    , transformers-base      == 0.4.*
    , unordered-containers   == 0.2.*
    , vector
    , wai
    , wai-app-static
    , warp                   == 1.2.*
    , websockets             == 0.6.*
